// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Schemaloading has at least one package 1`] = `
Model {
  "_defaultPackageName": "system",
  "init": Immutable.Record {
    "name": "ToDoListApplication",
    "title": undefined,
    "description": undefined,
  },
  "store": Immutable.Record {
    "name": "ToDoListApplication",
    "title": null,
    "description": null,
    "packages": Immutable.Map {
      "system": Package {
        "init": Immutable.Record {
          "acl": 0,
          "name": "system",
          "items": Array [],
        },
        "store": Immutable.Record {
          "name": "system",
          "title": null,
          "description": null,
          "acl": 0,
          "abstract": null,
          "items": Immutable.Map {
            "User": Entity {
              "init": Immutable.Record {
                "name": "User",
                "description": "User",
                "fields": Object {
                  "enabled": Object {
                    "type": "boolean",
                  },
                  "groups": Object {
                    "relation": Object {
                      "belongsToMany": "Group#",
                      "using": "UsersToGroupsMap#user",
                    },
                  },
                  "isSystem": Object {
                    "type": "boolean",
                  },
                  "password": Object {
                    "required": true,
                  },
                  "userName": Object {
                    "identity": true,
                  },
                },
              },
              "store": Immutable.Record {
                "package": null,
                "name": "User",
                "title": null,
                "description": "User",
                "acl": null,
                "plural": null,
                "singular": null,
                "fields": Immutable.Map {
                  "userName": Field {
                    "init": Immutable.Record {
                      "name": "userName",
                      "identity": true,
                    },
                    "store": Immutable.Record {
                      "name": "userName",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": true,
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": null,
                      "required": null,
                      "type": null,
                    },
                  },
                  "password": Field {
                    "init": Immutable.Record {
                      "name": "password",
                      "required": true,
                    },
                    "store": Immutable.Record {
                      "name": "password",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": null,
                      "required": true,
                      "type": null,
                    },
                  },
                  "isSystem": Field {
                    "init": Immutable.Record {
                      "name": "isSystem",
                      "type": "boolean",
                    },
                    "store": Immutable.Record {
                      "name": "isSystem",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": null,
                      "required": null,
                      "type": "boolean",
                    },
                  },
                  "enabled": Field {
                    "init": Immutable.Record {
                      "name": "enabled",
                      "type": "boolean",
                    },
                    "store": Immutable.Record {
                      "name": "enabled",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": null,
                      "required": null,
                      "type": "boolean",
                    },
                  },
                  "groups": Field {
                    "init": Immutable.Record {
                      "name": "groups",
                      "relation": Object {
                        "belongsToMany": "Group#",
                        "using": "UsersToGroupsMap#user",
                      },
                    },
                    "store": Immutable.Record {
                      "name": "groups",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": BelongsToMany {
                        "init": Immutable.Record {
                          "belongsToMany": "Group#",
                          "using": "UsersToGroupsMap#user",
                        },
                        "store": Immutable.Record {
                          "name": null,
                          "title": null,
                          "description": null,
                          "fields": null,
                          "opposite": null,
                          "belongsToMany": EntityRef {
                            "store": Immutable.Record {
                              "backField": "",
                              "entity": "Group",
                              "field": "",
                            },
                          },
                          "using": EntityRef {
                            "store": Immutable.Record {
                              "backField": "",
                              "entity": "UsersToGroupsMap",
                              "field": "user",
                            },
                          },
                          "single": false,
                          "stored": false,
                          "embedded": false,
                          "fullName": null,
                          "normalName": null,
                          "shortName": null,
                        },
                      },
                      "required": null,
                      "type": null,
                    },
                  },
                },
                "storage": null,
                "indexed": null,
                "relations": null,
                "required": null,
              },
            },
            "Group": Entity {
              "init": Immutable.Record {
                "name": "Group",
                "description": "Group of users that can share common ToDos",
                "fields": Object {
                  "description": Object {
                    "indexed": "text",
                  },
                  "name": Object {
                    "identity": true,
                    "indexed": "text",
                  },
                  "todoItems": Object {
                    "relation": Object {
                      "belongsToMany": "ToDoItem#",
                      "using": "ToDoItemsSharedToGroupsMap#group",
                    },
                  },
                  "users": Object {
                    "relation": Object {
                      "belongsToMany": "User#",
                      "using": "UsersToGroupsMap#group",
                    },
                  },
                },
              },
              "store": Immutable.Record {
                "package": null,
                "name": "Group",
                "title": null,
                "description": "Group of users that can share common ToDos",
                "acl": null,
                "plural": null,
                "singular": null,
                "fields": Immutable.Map {
                  "name": Field {
                    "init": Immutable.Record {
                      "name": "name",
                      "indexed": "text",
                      "identity": true,
                    },
                    "store": Immutable.Record {
                      "name": "name",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": true,
                      "idKey": null,
                      "indexed": "text",
                      "order": null,
                      "persistent": null,
                      "relation": null,
                      "required": null,
                      "type": null,
                    },
                  },
                  "description": Field {
                    "init": Immutable.Record {
                      "name": "description",
                      "indexed": "text",
                    },
                    "store": Immutable.Record {
                      "name": "description",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": "text",
                      "order": null,
                      "persistent": null,
                      "relation": null,
                      "required": null,
                      "type": null,
                    },
                  },
                  "users": Field {
                    "init": Immutable.Record {
                      "name": "users",
                      "relation": Object {
                        "belongsToMany": "User#",
                        "using": "UsersToGroupsMap#group",
                      },
                    },
                    "store": Immutable.Record {
                      "name": "users",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": BelongsToMany {
                        "init": Immutable.Record {
                          "belongsToMany": "User#",
                          "using": "UsersToGroupsMap#group",
                        },
                        "store": Immutable.Record {
                          "name": null,
                          "title": null,
                          "description": null,
                          "fields": null,
                          "opposite": null,
                          "belongsToMany": EntityRef {
                            "store": Immutable.Record {
                              "backField": "",
                              "entity": "User",
                              "field": "",
                            },
                          },
                          "using": EntityRef {
                            "store": Immutable.Record {
                              "backField": "",
                              "entity": "UsersToGroupsMap",
                              "field": "group",
                            },
                          },
                          "single": false,
                          "stored": false,
                          "embedded": false,
                          "fullName": null,
                          "normalName": null,
                          "shortName": null,
                        },
                      },
                      "required": null,
                      "type": null,
                    },
                  },
                  "todoItems": Field {
                    "init": Immutable.Record {
                      "name": "todoItems",
                      "relation": Object {
                        "belongsToMany": "ToDoItem#",
                        "using": "ToDoItemsSharedToGroupsMap#group",
                      },
                    },
                    "store": Immutable.Record {
                      "name": "todoItems",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": BelongsToMany {
                        "init": Immutable.Record {
                          "belongsToMany": "ToDoItem#",
                          "using": "ToDoItemsSharedToGroupsMap#group",
                        },
                        "store": Immutable.Record {
                          "name": null,
                          "title": null,
                          "description": null,
                          "fields": null,
                          "opposite": null,
                          "belongsToMany": EntityRef {
                            "store": Immutable.Record {
                              "backField": "",
                              "entity": "ToDoItem",
                              "field": "",
                            },
                          },
                          "using": EntityRef {
                            "store": Immutable.Record {
                              "backField": "",
                              "entity": "ToDoItemsSharedToGroupsMap",
                              "field": "group",
                            },
                          },
                          "single": false,
                          "stored": false,
                          "embedded": false,
                          "fullName": null,
                          "normalName": null,
                          "shortName": null,
                        },
                      },
                      "required": null,
                      "type": null,
                    },
                  },
                },
                "storage": null,
                "indexed": null,
                "relations": null,
                "required": null,
              },
            },
            "UsersToGroupsMap": Entity {
              "init": Immutable.Record {
                "name": "UsersToGroupsMap",
                "description": "Users to Groups mapping",
                "fields": Object {
                  "group": Object {
                    "identity": "linkTable",
                  },
                  "groupLink": Object {
                    "relation": Object {
                      "belongsTo": "group@Group#",
                    },
                  },
                  "user": Object {
                    "identity": "linkTable",
                  },
                  "userLink": Object {
                    "relation": Object {
                      "belongsTo": "user@User#",
                    },
                  },
                },
              },
              "store": Immutable.Record {
                "package": null,
                "name": "UsersToGroupsMap",
                "title": null,
                "description": "Users to Groups mapping",
                "acl": null,
                "plural": null,
                "singular": null,
                "fields": Immutable.Map {
                  "user": Field {
                    "init": Immutable.Record {
                      "name": "user",
                      "identity": "linkTable",
                    },
                    "store": Immutable.Record {
                      "name": "user",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": "linkTable",
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": null,
                      "required": null,
                      "type": null,
                    },
                  },
                  "group": Field {
                    "init": Immutable.Record {
                      "name": "group",
                      "identity": "linkTable",
                    },
                    "store": Immutable.Record {
                      "name": "group",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": "linkTable",
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": null,
                      "required": null,
                      "type": null,
                    },
                  },
                  "userLink": Field {
                    "init": Immutable.Record {
                      "name": "userLink",
                      "relation": Object {
                        "belongsTo": "user@User#",
                      },
                    },
                    "store": Immutable.Record {
                      "name": "userLink",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": BelongsTo {
                        "init": Immutable.Record {
                          "belongsTo": "user@User#",
                        },
                        "store": Immutable.Record {
                          "name": null,
                          "title": null,
                          "description": null,
                          "fields": null,
                          "opposite": null,
                          "belongsTo": EntityRef {
                            "store": Immutable.Record {
                              "backField": "user",
                              "entity": "User",
                              "field": "",
                            },
                          },
                          "single": true,
                          "stored": true,
                          "embedded": true,
                          "fullName": null,
                          "normalName": null,
                          "shortName": null,
                        },
                      },
                      "required": null,
                      "type": null,
                    },
                  },
                  "groupLink": Field {
                    "init": Immutable.Record {
                      "name": "groupLink",
                      "relation": Object {
                        "belongsTo": "group@Group#",
                      },
                    },
                    "store": Immutable.Record {
                      "name": "groupLink",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": BelongsTo {
                        "init": Immutable.Record {
                          "belongsTo": "group@Group#",
                        },
                        "store": Immutable.Record {
                          "name": null,
                          "title": null,
                          "description": null,
                          "fields": null,
                          "opposite": null,
                          "belongsTo": EntityRef {
                            "store": Immutable.Record {
                              "backField": "group",
                              "entity": "Group",
                              "field": "",
                            },
                          },
                          "single": true,
                          "stored": true,
                          "embedded": true,
                          "fullName": null,
                          "normalName": null,
                          "shortName": null,
                        },
                      },
                      "required": null,
                      "type": null,
                    },
                  },
                },
                "storage": null,
                "indexed": null,
                "relations": null,
                "required": null,
              },
            },
            "ToDoItem": Entity {
              "init": Immutable.Record {
                "name": "ToDoItem",
                "description": "ToDo item",
                "fields": Array [
                  Object {
                    "name": "done",
                    "type": "Boolean",
                  },
                  Object {
                    "indexed": "text",
                    "name": "name",
                  },
                  Object {
                    "indexed": "text",
                    "name": "description",
                  },
                  Object {
                    "name": "dueTo",
                    "type": "Date",
                  },
                  Object {
                    "name": "isPrivate",
                    "type": "Boolean",
                  },
                  Object {
                    "name": "type",
                    "type": "ToDotype",
                  },
                  Object {
                    "indexed": true,
                    "name": "assignedTo",
                    "relation": Object {
                      "belongsTo": "User#",
                    },
                  },
                  Object {
                    "indexed": true,
                    "name": "creator",
                    "relation": Object {
                      "belongsTo": "User#",
                    },
                  },
                  Object {
                    "name": "sharedTo",
                    "relation": Object {
                      "belongsToMany": "Group#",
                      "using": "ToDoItemsSharedToGroupsMap#item",
                    },
                  },
                ],
              },
              "store": Immutable.Record {
                "package": null,
                "name": "ToDoItem",
                "title": null,
                "description": "ToDo item",
                "acl": null,
                "plural": null,
                "singular": null,
                "fields": Immutable.Map {
                  "sharedTo": Field {
                    "init": Immutable.Record {
                      "name": "sharedTo",
                      "relation": Object {
                        "belongsToMany": "Group#",
                        "using": "ToDoItemsSharedToGroupsMap#item",
                      },
                    },
                    "store": Immutable.Record {
                      "name": "sharedTo",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": BelongsToMany {
                        "init": Immutable.Record {
                          "belongsToMany": "Group#",
                          "using": "ToDoItemsSharedToGroupsMap#item",
                        },
                        "store": Immutable.Record {
                          "name": null,
                          "title": null,
                          "description": null,
                          "fields": null,
                          "opposite": null,
                          "belongsToMany": EntityRef {
                            "store": Immutable.Record {
                              "backField": "",
                              "entity": "Group",
                              "field": "",
                            },
                          },
                          "using": EntityRef {
                            "store": Immutable.Record {
                              "backField": "",
                              "entity": "ToDoItemsSharedToGroupsMap",
                              "field": "item",
                            },
                          },
                          "single": false,
                          "stored": false,
                          "embedded": false,
                          "fullName": null,
                          "normalName": null,
                          "shortName": null,
                        },
                      },
                      "required": null,
                      "type": null,
                    },
                  },
                  "done": Field {
                    "init": Immutable.Record {
                      "name": "done",
                      "type": "Boolean",
                    },
                    "store": Immutable.Record {
                      "name": "done",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": null,
                      "required": null,
                      "type": "Boolean",
                    },
                  },
                  "assignedTo": Field {
                    "init": Immutable.Record {
                      "name": "assignedTo",
                      "indexed": true,
                      "relation": Object {
                        "belongsTo": "User#",
                      },
                    },
                    "store": Immutable.Record {
                      "name": "assignedTo",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": true,
                      "order": null,
                      "persistent": null,
                      "relation": BelongsTo {
                        "init": Immutable.Record {
                          "belongsTo": "User#",
                        },
                        "store": Immutable.Record {
                          "name": null,
                          "title": null,
                          "description": null,
                          "fields": null,
                          "opposite": null,
                          "belongsTo": EntityRef {
                            "store": Immutable.Record {
                              "backField": "",
                              "entity": "User",
                              "field": "",
                            },
                          },
                          "single": true,
                          "stored": true,
                          "embedded": true,
                          "fullName": null,
                          "normalName": null,
                          "shortName": null,
                        },
                      },
                      "required": null,
                      "type": null,
                    },
                  },
                  "name": Field {
                    "init": Immutable.Record {
                      "name": "name",
                      "indexed": "text",
                    },
                    "store": Immutable.Record {
                      "name": "name",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": "text",
                      "order": null,
                      "persistent": null,
                      "relation": null,
                      "required": null,
                      "type": null,
                    },
                  },
                  "creator": Field {
                    "init": Immutable.Record {
                      "name": "creator",
                      "indexed": true,
                      "relation": Object {
                        "belongsTo": "User#",
                      },
                    },
                    "store": Immutable.Record {
                      "name": "creator",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": true,
                      "order": null,
                      "persistent": null,
                      "relation": BelongsTo {
                        "init": Immutable.Record {
                          "belongsTo": "User#",
                        },
                        "store": Immutable.Record {
                          "name": null,
                          "title": null,
                          "description": null,
                          "fields": null,
                          "opposite": null,
                          "belongsTo": EntityRef {
                            "store": Immutable.Record {
                              "backField": "",
                              "entity": "User",
                              "field": "",
                            },
                          },
                          "single": true,
                          "stored": true,
                          "embedded": true,
                          "fullName": null,
                          "normalName": null,
                          "shortName": null,
                        },
                      },
                      "required": null,
                      "type": null,
                    },
                  },
                  "dueTo": Field {
                    "init": Immutable.Record {
                      "name": "dueTo",
                      "type": "Date",
                    },
                    "store": Immutable.Record {
                      "name": "dueTo",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": null,
                      "required": null,
                      "type": "Date",
                    },
                  },
                  "isPrivate": Field {
                    "init": Immutable.Record {
                      "name": "isPrivate",
                      "type": "Boolean",
                    },
                    "store": Immutable.Record {
                      "name": "isPrivate",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": null,
                      "required": null,
                      "type": "Boolean",
                    },
                  },
                  "type": Field {
                    "init": Immutable.Record {
                      "name": "type",
                      "type": "ToDotype",
                    },
                    "store": Immutable.Record {
                      "name": "type",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": null,
                      "required": null,
                      "type": "ToDotype",
                    },
                  },
                  "description": Field {
                    "init": Immutable.Record {
                      "name": "description",
                      "indexed": "text",
                    },
                    "store": Immutable.Record {
                      "name": "description",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": "text",
                      "order": null,
                      "persistent": null,
                      "relation": null,
                      "required": null,
                      "type": null,
                    },
                  },
                },
                "storage": null,
                "indexed": null,
                "relations": null,
                "required": null,
              },
            },
            "ToDoItemsSharedToGroupsMap": Entity {
              "init": Immutable.Record {
                "name": "ToDoItemsSharedToGroupsMap",
                "description": "Sharing ToDo items between groups",
                "fields": Object {
                  "group": Object {
                    "identity": "shared",
                    "indexed": true,
                  },
                  "groupLink": Object {
                    "relation": Object {
                      "belongsTo": "group@Group#",
                    },
                  },
                  "item": Object {
                    "identity": "shared",
                    "indexed": true,
                  },
                  "itemLink": Object {
                    "relation": Object {
                      "belongsTo": "item@ToDoItem#",
                    },
                  },
                },
              },
              "store": Immutable.Record {
                "package": null,
                "name": "ToDoItemsSharedToGroupsMap",
                "title": null,
                "description": "Sharing ToDo items between groups",
                "acl": null,
                "plural": null,
                "singular": null,
                "fields": Immutable.Map {
                  "item": Field {
                    "init": Immutable.Record {
                      "name": "item",
                      "indexed": true,
                      "identity": "shared",
                    },
                    "store": Immutable.Record {
                      "name": "item",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": "shared",
                      "idKey": null,
                      "indexed": true,
                      "order": null,
                      "persistent": null,
                      "relation": null,
                      "required": null,
                      "type": null,
                    },
                  },
                  "group": Field {
                    "init": Immutable.Record {
                      "name": "group",
                      "indexed": true,
                      "identity": "shared",
                    },
                    "store": Immutable.Record {
                      "name": "group",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": "shared",
                      "idKey": null,
                      "indexed": true,
                      "order": null,
                      "persistent": null,
                      "relation": null,
                      "required": null,
                      "type": null,
                    },
                  },
                  "itemLink": Field {
                    "init": Immutable.Record {
                      "name": "itemLink",
                      "relation": Object {
                        "belongsTo": "item@ToDoItem#",
                      },
                    },
                    "store": Immutable.Record {
                      "name": "itemLink",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": BelongsTo {
                        "init": Immutable.Record {
                          "belongsTo": "item@ToDoItem#",
                        },
                        "store": Immutable.Record {
                          "name": null,
                          "title": null,
                          "description": null,
                          "fields": null,
                          "opposite": null,
                          "belongsTo": EntityRef {
                            "store": Immutable.Record {
                              "backField": "item",
                              "entity": "ToDoItem",
                              "field": "",
                            },
                          },
                          "single": true,
                          "stored": true,
                          "embedded": true,
                          "fullName": null,
                          "normalName": null,
                          "shortName": null,
                        },
                      },
                      "required": null,
                      "type": null,
                    },
                  },
                  "groupLink": Field {
                    "init": Immutable.Record {
                      "name": "groupLink",
                      "relation": Object {
                        "belongsTo": "group@Group#",
                      },
                    },
                    "store": Immutable.Record {
                      "name": "groupLink",
                      "title": null,
                      "description": null,
                      "acl": null,
                      "args": null,
                      "derived": null,
                      "entity": null,
                      "identity": null,
                      "idKey": null,
                      "indexed": null,
                      "order": null,
                      "persistent": null,
                      "relation": BelongsTo {
                        "init": Immutable.Record {
                          "belongsTo": "group@Group#",
                        },
                        "store": Immutable.Record {
                          "name": null,
                          "title": null,
                          "description": null,
                          "fields": null,
                          "opposite": null,
                          "belongsTo": EntityRef {
                            "store": Immutable.Record {
                              "backField": "group",
                              "entity": "Group",
                              "field": "",
                            },
                          },
                          "single": true,
                          "stored": true,
                          "embedded": true,
                          "fullName": null,
                          "normalName": null,
                          "shortName": null,
                        },
                      },
                      "required": null,
                      "type": null,
                    },
                  },
                },
                "storage": null,
                "indexed": null,
                "relations": null,
                "required": null,
              },
            },
            "loginUser": Mutation {
              "init": Immutable.Record {
                "name": "loginUser",
                "description": "make user login",
                "args": Array [
                  Object {
                    "name": "userName",
                    "required": true,
                  },
                  Object {
                    "name": "password",
                    "required": true,
                  },
                ],
                "payload": Object {
                  "token": Object {
                    "type": "string",
                  },
                },
              },
              "store": Immutable.Record {
                "name": "loginUser",
                "package": null,
                "title": null,
                "description": "make user login",
                "args": Immutable.Map {
                  "userName": FieldArg {
                    "init": Immutable.Record {
                      "name": "userName",
                      "required": true,
                    },
                    "store": Immutable.Record {
                      "name": "userName",
                      "title": null,
                      "description": null,
                      "required": true,
                      "type": null,
                      "defaultValue": null,
                    },
                  },
                  "password": FieldArg {
                    "init": Immutable.Record {
                      "name": "password",
                      "required": true,
                    },
                    "store": Immutable.Record {
                      "name": "password",
                      "title": null,
                      "description": null,
                      "required": true,
                      "type": null,
                      "defaultValue": null,
                    },
                  },
                },
                "payload": Immutable.Map {
                  "token": FieldArg {
                    "init": Immutable.Record {
                      "name": "token",
                      "type": "string",
                    },
                    "store": Immutable.Record {
                      "name": "token",
                      "title": null,
                      "description": null,
                      "required": null,
                      "type": "string",
                      "defaultValue": null,
                    },
                  },
                },
                "acl": Object {
                  "execute": Immutable.Set [],
                },
              },
            },
            "ToDoType": Enum {
              "init": Immutable.Record {
                "name": "ToDoType",
                "values": Object {
                  "admin": Object {
                    "name": "super pupper",
                    "title": "The super power User",
                    "type": "string",
                    "value": "admin",
                  },
                  "public user": "public",
                  "registered user": "registered",
                },
              },
              "store": Immutable.Record {
                "name": "ToDoType",
                "title": null,
                "description": null,
                "package": null,
                "values": Immutable.Map {
                  "public": EnumItem {
                    "init": Immutable.Record {
                      "name": "public",
                    },
                    "store": Immutable.Record {
                      "name": "public",
                      "title": null,
                      "description": null,
                      "type": null,
                      "value": null,
                    },
                  },
                  "registered": EnumItem {
                    "init": Immutable.Record {
                      "name": "registered",
                    },
                    "store": Immutable.Record {
                      "name": "registered",
                      "title": null,
                      "description": null,
                      "type": null,
                      "value": null,
                    },
                  },
                  "super pupper": EnumItem {
                    "init": Immutable.Record {
                      "name": "super pupper",
                      "value": "admin",
                      "type": "string",
                      "title": "The super power User",
                    },
                    "store": Immutable.Record {
                      "name": "super pupper",
                      "title": "The super power User",
                      "description": null,
                      "type": "string",
                      "value": "admin",
                    },
                  },
                },
              },
            },
          },
          "model": null,
        },
      },
    },
  },
}
`;

exports[`Schemaloading has at least one package 2`] = `
Object {
  "description": null,
  "name": "ToDoListApplication",
  "packages": Array [
    Object {
      "abstract": null,
      "acl": 0,
      "description": null,
      "items": Array [
        Object {
          "acl": null,
          "description": "User",
          "fields": Array [
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": true,
              "indexed": null,
              "name": "userName",
              "order": null,
              "persistent": null,
              "relation": null,
              "required": null,
              "title": null,
              "type": null,
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": null,
              "name": "password",
              "order": null,
              "persistent": null,
              "relation": null,
              "required": true,
              "title": null,
              "type": null,
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": null,
              "name": "isSystem",
              "order": null,
              "persistent": null,
              "relation": null,
              "required": null,
              "title": null,
              "type": "boolean",
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": null,
              "name": "enabled",
              "order": null,
              "persistent": null,
              "relation": null,
              "required": null,
              "title": null,
              "type": "boolean",
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": null,
              "name": "groups",
              "order": null,
              "persistent": null,
              "relation": Object {
                "fields": null,
                "init": Immutable.Record {
                  "belongsToMany": "Group#",
                  "using": "UsersToGroupsMap#user",
                },
                "store": Immutable.Record {
                  "name": null,
                  "title": null,
                  "description": null,
                  "fields": null,
                  "opposite": null,
                  "belongsToMany": EntityRef {
                    "store": Immutable.Record {
                      "backField": "",
                      "entity": "Group",
                      "field": "",
                    },
                  },
                  "using": EntityRef {
                    "store": Immutable.Record {
                      "backField": "",
                      "entity": "UsersToGroupsMap",
                      "field": "user",
                    },
                  },
                  "single": false,
                  "stored": false,
                  "embedded": false,
                  "fullName": null,
                  "normalName": null,
                  "shortName": null,
                },
              },
              "required": null,
              "title": null,
              "type": null,
            },
          ],
          "indexed": null,
          "name": "User",
          "package": null,
          "plural": null,
          "relations": null,
          "required": null,
          "singular": null,
          "storage": null,
          "title": null,
        },
        Object {
          "acl": null,
          "description": "Group of users that can share common ToDos",
          "fields": Array [
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": true,
              "indexed": "text",
              "name": "name",
              "order": null,
              "persistent": null,
              "relation": null,
              "required": null,
              "title": null,
              "type": null,
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": "text",
              "name": "description",
              "order": null,
              "persistent": null,
              "relation": null,
              "required": null,
              "title": null,
              "type": null,
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": null,
              "name": "users",
              "order": null,
              "persistent": null,
              "relation": Object {
                "fields": null,
                "init": Immutable.Record {
                  "belongsToMany": "User#",
                  "using": "UsersToGroupsMap#group",
                },
                "store": Immutable.Record {
                  "name": null,
                  "title": null,
                  "description": null,
                  "fields": null,
                  "opposite": null,
                  "belongsToMany": EntityRef {
                    "store": Immutable.Record {
                      "backField": "",
                      "entity": "User",
                      "field": "",
                    },
                  },
                  "using": EntityRef {
                    "store": Immutable.Record {
                      "backField": "",
                      "entity": "UsersToGroupsMap",
                      "field": "group",
                    },
                  },
                  "single": false,
                  "stored": false,
                  "embedded": false,
                  "fullName": null,
                  "normalName": null,
                  "shortName": null,
                },
              },
              "required": null,
              "title": null,
              "type": null,
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": null,
              "name": "todoItems",
              "order": null,
              "persistent": null,
              "relation": Object {
                "fields": null,
                "init": Immutable.Record {
                  "belongsToMany": "ToDoItem#",
                  "using": "ToDoItemsSharedToGroupsMap#group",
                },
                "store": Immutable.Record {
                  "name": null,
                  "title": null,
                  "description": null,
                  "fields": null,
                  "opposite": null,
                  "belongsToMany": EntityRef {
                    "store": Immutable.Record {
                      "backField": "",
                      "entity": "ToDoItem",
                      "field": "",
                    },
                  },
                  "using": EntityRef {
                    "store": Immutable.Record {
                      "backField": "",
                      "entity": "ToDoItemsSharedToGroupsMap",
                      "field": "group",
                    },
                  },
                  "single": false,
                  "stored": false,
                  "embedded": false,
                  "fullName": null,
                  "normalName": null,
                  "shortName": null,
                },
              },
              "required": null,
              "title": null,
              "type": null,
            },
          ],
          "indexed": null,
          "name": "Group",
          "package": null,
          "plural": null,
          "relations": null,
          "required": null,
          "singular": null,
          "storage": null,
          "title": null,
        },
        Object {
          "acl": null,
          "description": "Users to Groups mapping",
          "fields": Array [
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": "linkTable",
              "indexed": null,
              "name": "user",
              "order": null,
              "persistent": null,
              "relation": null,
              "required": null,
              "title": null,
              "type": null,
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": "linkTable",
              "indexed": null,
              "name": "group",
              "order": null,
              "persistent": null,
              "relation": null,
              "required": null,
              "title": null,
              "type": null,
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": null,
              "name": "userLink",
              "order": null,
              "persistent": null,
              "relation": Object {
                "belongsTo": "user@User#id",
                "fields": null,
                "init": Immutable.Record {
                  "belongsTo": "user@User#",
                },
                "store": Immutable.Record {
                  "name": null,
                  "title": null,
                  "description": null,
                  "fields": null,
                  "opposite": null,
                  "belongsTo": EntityRef {
                    "store": Immutable.Record {
                      "backField": "user",
                      "entity": "User",
                      "field": "",
                    },
                  },
                  "single": true,
                  "stored": true,
                  "embedded": true,
                  "fullName": null,
                  "normalName": null,
                  "shortName": null,
                },
              },
              "required": null,
              "title": null,
              "type": null,
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": null,
              "name": "groupLink",
              "order": null,
              "persistent": null,
              "relation": Object {
                "belongsTo": "group@Group#id",
                "fields": null,
                "init": Immutable.Record {
                  "belongsTo": "group@Group#",
                },
                "store": Immutable.Record {
                  "name": null,
                  "title": null,
                  "description": null,
                  "fields": null,
                  "opposite": null,
                  "belongsTo": EntityRef {
                    "store": Immutable.Record {
                      "backField": "group",
                      "entity": "Group",
                      "field": "",
                    },
                  },
                  "single": true,
                  "stored": true,
                  "embedded": true,
                  "fullName": null,
                  "normalName": null,
                  "shortName": null,
                },
              },
              "required": null,
              "title": null,
              "type": null,
            },
          ],
          "indexed": null,
          "name": "UsersToGroupsMap",
          "package": null,
          "plural": null,
          "relations": null,
          "required": null,
          "singular": null,
          "storage": null,
          "title": null,
        },
        Object {
          "acl": null,
          "description": "ToDo item",
          "fields": Array [
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": null,
              "name": "sharedTo",
              "order": null,
              "persistent": null,
              "relation": Object {
                "fields": null,
                "init": Immutable.Record {
                  "belongsToMany": "Group#",
                  "using": "ToDoItemsSharedToGroupsMap#item",
                },
                "store": Immutable.Record {
                  "name": null,
                  "title": null,
                  "description": null,
                  "fields": null,
                  "opposite": null,
                  "belongsToMany": EntityRef {
                    "store": Immutable.Record {
                      "backField": "",
                      "entity": "Group",
                      "field": "",
                    },
                  },
                  "using": EntityRef {
                    "store": Immutable.Record {
                      "backField": "",
                      "entity": "ToDoItemsSharedToGroupsMap",
                      "field": "item",
                    },
                  },
                  "single": false,
                  "stored": false,
                  "embedded": false,
                  "fullName": null,
                  "normalName": null,
                  "shortName": null,
                },
              },
              "required": null,
              "title": null,
              "type": null,
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": null,
              "name": "done",
              "order": null,
              "persistent": null,
              "relation": null,
              "required": null,
              "title": null,
              "type": "Boolean",
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": true,
              "name": "assignedTo",
              "order": null,
              "persistent": null,
              "relation": Object {
                "belongsTo": "User#id",
                "fields": null,
                "init": Immutable.Record {
                  "belongsTo": "User#",
                },
                "store": Immutable.Record {
                  "name": null,
                  "title": null,
                  "description": null,
                  "fields": null,
                  "opposite": null,
                  "belongsTo": EntityRef {
                    "store": Immutable.Record {
                      "backField": "",
                      "entity": "User",
                      "field": "",
                    },
                  },
                  "single": true,
                  "stored": true,
                  "embedded": true,
                  "fullName": null,
                  "normalName": null,
                  "shortName": null,
                },
              },
              "required": null,
              "title": null,
              "type": null,
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": "text",
              "name": "name",
              "order": null,
              "persistent": null,
              "relation": null,
              "required": null,
              "title": null,
              "type": null,
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": true,
              "name": "creator",
              "order": null,
              "persistent": null,
              "relation": Object {
                "belongsTo": "User#id",
                "fields": null,
                "init": Immutable.Record {
                  "belongsTo": "User#",
                },
                "store": Immutable.Record {
                  "name": null,
                  "title": null,
                  "description": null,
                  "fields": null,
                  "opposite": null,
                  "belongsTo": EntityRef {
                    "store": Immutable.Record {
                      "backField": "",
                      "entity": "User",
                      "field": "",
                    },
                  },
                  "single": true,
                  "stored": true,
                  "embedded": true,
                  "fullName": null,
                  "normalName": null,
                  "shortName": null,
                },
              },
              "required": null,
              "title": null,
              "type": null,
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": null,
              "name": "dueTo",
              "order": null,
              "persistent": null,
              "relation": null,
              "required": null,
              "title": null,
              "type": "Date",
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": null,
              "name": "isPrivate",
              "order": null,
              "persistent": null,
              "relation": null,
              "required": null,
              "title": null,
              "type": "Boolean",
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": null,
              "name": "type",
              "order": null,
              "persistent": null,
              "relation": null,
              "required": null,
              "title": null,
              "type": "ToDotype",
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": "text",
              "name": "description",
              "order": null,
              "persistent": null,
              "relation": null,
              "required": null,
              "title": null,
              "type": null,
            },
          ],
          "indexed": null,
          "name": "ToDoItem",
          "package": null,
          "plural": null,
          "relations": null,
          "required": null,
          "singular": null,
          "storage": null,
          "title": null,
        },
        Object {
          "acl": null,
          "description": "Sharing ToDo items between groups",
          "fields": Array [
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": "shared",
              "indexed": true,
              "name": "item",
              "order": null,
              "persistent": null,
              "relation": null,
              "required": null,
              "title": null,
              "type": null,
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": "shared",
              "indexed": true,
              "name": "group",
              "order": null,
              "persistent": null,
              "relation": null,
              "required": null,
              "title": null,
              "type": null,
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": null,
              "name": "itemLink",
              "order": null,
              "persistent": null,
              "relation": Object {
                "belongsTo": "item@ToDoItem#id",
                "fields": null,
                "init": Immutable.Record {
                  "belongsTo": "item@ToDoItem#",
                },
                "store": Immutable.Record {
                  "name": null,
                  "title": null,
                  "description": null,
                  "fields": null,
                  "opposite": null,
                  "belongsTo": EntityRef {
                    "store": Immutable.Record {
                      "backField": "item",
                      "entity": "ToDoItem",
                      "field": "",
                    },
                  },
                  "single": true,
                  "stored": true,
                  "embedded": true,
                  "fullName": null,
                  "normalName": null,
                  "shortName": null,
                },
              },
              "required": null,
              "title": null,
              "type": null,
            },
            Object {
              "acl": null,
              "args": null,
              "derived": null,
              "description": null,
              "entity": null,
              "idKey": null,
              "identity": null,
              "indexed": null,
              "name": "groupLink",
              "order": null,
              "persistent": null,
              "relation": Object {
                "belongsTo": "group@Group#id",
                "fields": null,
                "init": Immutable.Record {
                  "belongsTo": "group@Group#",
                },
                "store": Immutable.Record {
                  "name": null,
                  "title": null,
                  "description": null,
                  "fields": null,
                  "opposite": null,
                  "belongsTo": EntityRef {
                    "store": Immutable.Record {
                      "backField": "group",
                      "entity": "Group",
                      "field": "",
                    },
                  },
                  "single": true,
                  "stored": true,
                  "embedded": true,
                  "fullName": null,
                  "normalName": null,
                  "shortName": null,
                },
              },
              "required": null,
              "title": null,
              "type": null,
            },
          ],
          "indexed": null,
          "name": "ToDoItemsSharedToGroupsMap",
          "package": null,
          "plural": null,
          "relations": null,
          "required": null,
          "singular": null,
          "storage": null,
          "title": null,
        },
        Object {
          "acl": Object {
            "execute": Array [],
          },
          "args": Array [
            Object {
              "defaultValue": null,
              "description": null,
              "name": "userName",
              "required": true,
              "title": null,
              "type": null,
            },
            Object {
              "defaultValue": null,
              "description": null,
              "name": "password",
              "required": true,
              "title": null,
              "type": null,
            },
          ],
          "description": "make user login",
          "name": "loginUser",
          "package": null,
          "payload": Array [
            Object {
              "defaultValue": null,
              "description": null,
              "name": "token",
              "required": null,
              "title": null,
              "type": "string",
            },
          ],
          "title": null,
        },
        Object {
          "description": null,
          "name": "ToDoType",
          "package": null,
          "title": null,
          "values": Array [
            Object {
              "description": null,
              "name": "public",
              "title": null,
              "type": null,
              "value": null,
            },
            Object {
              "description": null,
              "name": "registered",
              "title": null,
              "type": null,
              "value": null,
            },
            Object {
              "description": null,
              "name": "super pupper",
              "title": "The super power User",
              "type": "string",
              "value": "admin",
            },
          ],
        },
      ],
      "model": null,
      "name": "system",
      "title": null,
    },
  ],
  "title": null,
}
`;
